<resources>
    <string name="app_name">House energy optimization</string>
    <string name="nameApp">House\nEnergy\nOptimization</string>
    <string name="BtnGoToMySets">Продовжити</string>
    <string name="NotToShow">Більше не показувати</string>
    <string name="title_activity_my_sets">Мої набори</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="mySets">Мої набори</string>
    <string name="baseOfDevices">База приладів</string>
    <string name="statisticsOfDevices">Статистика приладів</string>
    <string name="calculatorCosts">Калькулятор витрат</string>
    <string name="moneyOfMounth">Сума в місяць</string>
    <string name="Optimization">Оптимізувати</string>
    <string name="UAN">грн</string>
    <string name="change">Змінити</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tariff">Тариф</string>
    <string name="before3000">До 3000 кВТ</string>
    <string name="after3000">Після 3000 кВт</string>
    <string name="limit">Ліміт</string>
    <string name="addDevice">Додати прилад</string>
    <string name="devices">Прилади</string>
    <string name="nameDevice">Ім\'я приладу</string>
    <string name="extraInfoAddDevice">Додаткова інформація</string>
    <string name="power">Потужність</string>
    <string name="add">Додати</string>
    <string name="alculator">Калькулятор</string>
    <string name="calc">Рахувати</string>
    <string name="result">Результати</string>
    <string name="addSet">Додати набір</string>
    <string name="nameOfSet">Ім\'я набору</string>
    <string name="chouseDevive">Виберіть прилади</string>
</resources>
