<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.vovatkach2427gmail.houseenergyoptimization.Act.SetOptimizationAct">
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:contentInsetEnd="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetStart="0dp">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/ivNavBackSetOptimizationAct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_back"
                android:layout_gravity="start"
                android:layout_margin="5dp"/>
            <TextView
                android:id="@+id/tvSetNameActSetOptimization"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Набір 1"
                android:textSize="18sp"
                android:textColor="@color/colorWhite"/>
        </FrameLayout>
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark">
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/moneyOfMounth"
           android:textColor="@color/colorWhite"
           android:textSize="18sp"
           android:layout_margin="5dp"
           android:layout_weight="1"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:inputType="number"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:maxLength="5"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/UAN"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:layout_margin="5dp"
            android:layout_weight="1"/>
    </LinearLayout>
    <Button
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/Optimization"
        android:textSize="14sp"
        android:textColor="@color/colorWhite" />
    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvCertainSet"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.v7.widget.RecyclerView>

</LinearLayout>
